--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,9 @@ syslog-tracing News -- history of user-visible changes         -*- outline -*-
 
 * 0.0 builds
 
+** 0.0.4 build
+
+`Rfc5424Hostname` :=> `Hostname`, prep. for publication on crates.io.
 ** 0.0.3 build
 
 Re-factored the error scheme into per-module `Error` types.
