--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,9 @@ syslog-tracing News -- history of user-visible changes         -*- outline -*-
 
 * 0.0 builds
 
+** 0.0.5 build
+
+Documentation updates (crates.io doesn't support Org-down).
 ** 0.0.4 build
 
 `Rfc5424Hostname` :=> `Hostname`, prep. for publication on crates.io.
