--- a/THANKS
+++ b/THANKS
@@ -1,1 +1,4 @@
+  - Thanks to Dirk Stolle <https://github.com/striezel> for contributing
+  - Thanks to Lucas Tabis <https://github.com/ltabis> for contributing
+  - Thanks to Mikhail Trishchenkov <https://github.com/kriomant> for contributing
   - Thanks to the Tokio team for the tracing ecosystem
