--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,9 @@ syslog-tracing News -- history of user-visible changes         -*- outline -*-
 
 * 0.1 builds
 
+** 0.1.2 build
+
+*** bind the UDP socket to 0.0.0.0 instead of localhost
 ** 0.1.1 build
 
 *** Fix a few typos
