--- a/THANKS
+++ b/THANKS
@@ -1,3 +1,4 @@
+  - Thanks to Dirk Vanden Boer <https://github.com/dirkvdb> for contributing
   - Thanks to Dirk Stolle <https://github.com/striezel> for contributing
   - Thanks to Lucas Tabis <https://github.com/ltabis> for contributing
   - Thanks to Mikhail Trishchenkov <https://github.com/kriomant> for contributing
