--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,11 @@ syslog-tracing News -- history of user-visible changes         -*- outline -*-
 
 * 0.1 builds
 
+** 0.1.3 build
+
+*** general project cleanup
+
+Add COPYING, INSTALL, signoff scripts & touch-up Github actions.
 ** 0.1.2 build
 
 *** bind the UDP socket to 0.0.0.0 instead of localhost
