--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ syslog-tracing News -- history of user-visible changes         -*- outline -*-
 
 ** 0.1.3 build
 
+*** add a `Layer` constructor allowing all inners
 *** general project cleanup
 
 Add COPYING, INSTALL, signoff scripts & touch-up Github actions.
