--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,9 @@ syslog-tracing News -- history of user-visible changes         -*- outline -*-
 
 * 0.1 builds
 
+** 0.1.4 build
+
+*** build for target x86_64-pc-windows-gnu
 ** 0.1.3 build
 
 *** add a `Layer` constructor allowing all inners
