--- a/THANKS
+++ b/THANKS
@@ -1,3 +1,4 @@
+  - Thanks to elrafloon <https://github.com/elrafoon> for contributing
   - Thanks to Stanislav Ravas <https://github.com/elrafoon> for contributing
   - Thanks to Dirk Vanden Boer <https://github.com/dirkvdb> for contributing
   - Thanks to Dirk Stolle <https://github.com/striezel> for contributing
